infrastructure/network/ingress-nginx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notickets-ingress
  namespace: notickets
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: notickets.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
